<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="26dp"
    android:background="#ffffff">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/day"
        android:textColor="@color/calender_item_number_first_or_end"
        android:textSize="12sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/one"
        android:textColor="@color/calender_item_number"
        android:textSize="12sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/two"
        android:textColor="@color/calender_item_number"
        android:textSize="12sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/three"
        android:textColor="@color/calender_item_number"
        android:textSize="12sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/four"
        android:textColor="@color/calender_item_number"
        android:textSize="12sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/five"
        android:textColor="@color/calender_item_number"
        android:textSize="12sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/six"
        android:textColor="@color/calender_item_number_first_or_end"
        android:textSize="12sp" />
</LinearLayout>