<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000">

    <TextView
        android:id="@+id/tv_footer_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:text="@string/footer_normal"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_footer_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/tv_footer_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="20dp"
            android:text="@string/footer_loading" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_footer_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:text="@string/footer_end"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_footer_failed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:text="@string/footer_failed"
        android:visibility="gone" />

</RelativeLayout>
