<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_bank_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/null_value"
            android:textColor="@color/main_bank_card_bank_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/credit_card_num"
            android:textColor="@color/main_bank_card_account_color"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_bill_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/bill_date"
        android:textColor="@color/main_bank_card_bank_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_dollar_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/dollar_bill"
        android:textColor="@color/main_bank_card_bank_color"
        android:textSize="14sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tv_last_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/return_date"
            android:textColor="@color/main_bank_card_payment_date_color"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/repayment_money_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_money"
            android:text="@string/repayment_tips"
            android:textColor="@color/main_bank_card_playment_value_tips"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="130dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/main_bank_card_payment_value_color"
            android:textStyle="bold"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>
