<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#282c34">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/voice_bianlubianxie"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true"
        android:background="@android:drawable/title_bar"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/voice_caiyanglie"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sample_16K"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/voice_caiyanglie_sixteen" />

                <RadioButton
                    android:id="@+id/sample_8K"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/voice_caiyanglie_eight" />
            </RadioGroup>

            <ImageButton
                android:id="@+id/recordButton"
                style="@style/MediaButton"
                android:layout_height="match_parent"
                android:src="@drawable/record" />


            <ImageButton
                android:id="@+id/stopButton"
                style="@style/MediaButton"
                android:layout_height="match_parent"
                android:src="@drawable/stop" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/control"
        android:layout_below="@id/title"
        android:background="#ffffff">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:textColor="#000000" />
    </ScrollView>

</RelativeLayout>
