<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="236dp"
        android:adjustViewBounds="true"
        android:src="@drawable/header" />

    <RelativeLayout
        android:id="@+id/rl_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/add_city"
            android:textColor="@color/main_title_first_color"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address"
            android:paddingBottom="12dp"
            android:textColor="@color/main_title_first_color"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/tv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_temp"
            android:paddingBottom="10dp"
            android:text="@string/empty_weather"
            android:textColor="@color/main_title_first_color"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/iv_weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_temp"
            android:layout_toRightOf="@+id/tv_weather"
            android:paddingLeft="4dp" />

        <TextView
            android:id="@+id/tv_dressing_umbrella"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_weather"
            android:paddingBottom="10dp"
            android:text="@string/dressing"
            android:textColor="@color/main_title_first_color"
            android:textSize="12dp" />
    </RelativeLayout>

</FrameLayout>